# news-score

./: README.md  justfile
backend/: .gitignore  pyproject.toml
backend/app/: app.py  models.py  news.py
backend/tests/: conftest.py  test_app.py  test_measurements.py  test_models.py  test_news.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: news.ts
frontend/src/components/: Input.tsx
frontend/src/components/Button/: Button.css  Button.tsx
frontend/src/components/Card/: Card.css  Card.tsx
frontend/src/components/Input/: Input.css  Input.tsx
