[project]
name = "backend"
version = "0.1.0"
description = "The backend powering the NEWS score calculator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litestar[pydantic,standard,structlog]>=2.18.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]
